fix spacing for plus column move right

--- a/src/styles/queue.css
+++ b/src/styles/queue.css
@@ -110,8 +110,9 @@
 }
 
 .queue-table td:nth-child(5) {
-  width: 0.75rem;
-  padding-right: 0.1rem;
+  width: 0.5rem;
+  padding-right: 0;
+  padding-left: 0.25rem;
 }
 
 /* Heart + count */
